# cl

./: .gitignore  CMakeLists.txt  FindOpenCL.cmake  README.md
chapter-1/: CMakeLists.txt  saxpy.cpp
chapter-11/: CMakeLists.txt  bitonic_sort.cpp  knn_classification.cpp  linear_regression.cpp  parabolic_regression.cpp
chapter-2/: CMakeLists.txt  get_device_property.cpp  get_platform_property.cpp
chapter-3/: CMakeLists.txt  bufferRect.cpp  bufferRectangularReads.cpp  copyRectangular.cpp  histogram.cpp
chapter-4/: CMakeLists.txt  bmp_image.cpp  built_in_kernels.cpp  getSupportedImageFormats.cpp  histogram_image.cpp  image_sampler.cpp  saxpy_with_binary.cpp
chapter-5/: CMakeLists.txt  built_in_kernels.cpp  create_binary.cpp
chapter-6/: CMakeLists.txt  profiling_saxpy.cpp  sizeof.cpp
chapter-7/: CMakeLists.txt  sizeof.cpp
chapter-7MM/: MatrixMultiplication.cpp
chapter-8/: CMakeLists.txt  MatrixMultiplication.cpp
chapter-9/: CMakeLists.txt  gaussian.cpp  gaussian.h  gaussian_kernel.h  main.cpp  median.cpp  median.h  median_kernel.h  sobel.cpp  sobel.h  sobel_kernel.h
common/: bmp_image.cpp
gaussian/: CMakeLists.txt  gaussian.cpp  gaussian_kernel.h
images/: CMakeLists.txt  getSupportedImageFormats.cpp  histogram_image.cpp
include/: bmp_image.h  image.h.txt  ocl_macros.h
jpeg/: APP0.cpp  APP0.h  CMakeLists.txt  Copy of image.cpp  Copy of image.h  Framewave.cpp  Framewave.h  JPEGHuffCodec.cpp  JPEG_Decoder.cpp  JPEG_Decoder.hpp  JPEG_Decoder_Kernels - Copy.cl  SOF0.cpp  SOF0.h  debug.cpp  debug.h  image.cpp  image.h  init.h  jpeg_marker.cpp  markers.h  scan.cpp
test/: CMakeLists.txt  test.cpp
