include_directories( "C:/Users/rbanger/Documents/AMD APP/samples/opencl/SDKUtil/include" )
set( gaussian.Source ../common/bmp_image.cpp gaussian.cpp main.cpp ../common/Timer.cpp)
set( gaussian.Headers ../include/bmp_image.h gaussian.h ../include/Timer.h )
set( gaussian.Files ${gaussian.Source} ${gaussian.Headers} )
add_executable( gaussian  ${gaussian.Files} ) 
target_link_libraries( gaussian ${OPENCL_LIBRARIES} )  
